style.css
body {
  font-size: 150%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  min-height: calc(100vh - 25px);
  padding: 0 0 10px 0;
}

main {
  margin: 0 auto;
  text-align: justify;
  font-family: Iowan Old Style, Apple Garamond, Baskerville, Times New Roman, Droid Serif, Times, Source Serif Pro, serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
  max-width: 650px;
  padding: 5px;
}

h1::first-letter {
  color: #81A0A0;
  font-size: 125%;
}

hr {
  height: 1px;
  background: #000;
  border: 0;
}

a {
  color: #000;
}

footer {
  font-size: 80% !important;
}

@media screen and (prefers-color-scheme: dark) {
  a {
    color: #fff;
  }
  hr {
    background: #fff;
  }
}

@media (max-width: 580px) {
    body {
      min-height: calc(100vh - 100px);
    }
    main {
      text-align: left;
    }
}

